tests/error/py_errors/python_err.py
from tests.error.util import guppy


@guppy
def foo() -> int:
    return py(1 / 0)
